--- a/pages/product_page/product.html
+++ b/pages/product_page/product.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/svg+xml" href="/public/icon/uzum_logo.jpg" class="link_logo" />
+    <link rel="icon" type="image/svg+xml" href="/icon/uzum_logo.jpg" class="link_logo" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="/modules/header.scss">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -27,15 +27,15 @@
                     <div class="slider-container">
 
                     </div>
-                    <button class="btn_strelka left_strelka"><img src="/public//icon/strelka_left.svg" alt=""></button>
-                    <button class="btn_strelka right_strelka"><img src="/public//icon/strelka_right.svg" alt=""></button>
+                    <button class="btn_strelka left_strelka"><img src="//icon/strelka_left.svg" alt=""></button>
+                    <button class="btn_strelka right_strelka"><img src="//icon/strelka_right.svg" alt=""></button>
                 </div>
             </div>
             <div class="right_product">
                 <div class="up_right">
                     <div class="up_up">
-                        <p class="rate"><img src="/public/icon/star.png" alt="" class="rate_img"><span class="rate_span"></span></p>
-                        <p class="like_p"><img src="/public/icon/heart.png" alt="" class="like_img">В желания</p>
+                        <p class="rate"><img src="/icon/star.png" alt="" class="rate_img"><span class="rate_span"></span></p>
+                        <p class="like_p"><img src="/icon/heart.png" alt="" class="like_img">В желания</p>
                     </div>
                     <div class="up_middle">
                         <h1 class="up_p"></h1>
@@ -48,9 +48,9 @@
                     <div class="kol">
                         <p class="kol_p">Количество:</p>
                         <div class="kol_div">
-                            <button class="minus"><img src="/public/icon/minus.png" alt="" class="minus"></button>
+                            <button class="minus"><img src="/icon/minus.png" alt="" class="minus"></button>
                             <h1 class="num">1</h1>
-                            <button class="plus"><img src="/public/icon/Plus.svg" alt="" class="plus"></button>
+                            <button class="plus"><img src="/icon/Plus.svg" alt="" class="plus"></button>
                         </div>
                         <p class="kol_p">Цена:</p>
                         <div class="sena">
@@ -60,7 +60,7 @@
                         <button class="rass">
                             <h1 class="rass_h1"></h1>
                             <p class="rass_p">В рассрочку</p>
-                            <img src="/public/icon/strelka_right.svg" alt="" class="strelka_img">
+                            <img src="/icon/strelka_right.svg" alt="" class="strelka_img">
                         </button>
                         <div class="btns_div2">
                             <button class="add_card">Добавить в корзину</button>
