--- a/pages/card/card.html
+++ b/pages/card/card.html
@@ -14,7 +14,7 @@
     <div class="glav_container">
         <div class="container">
             <h1 class="h1_vse"><input type="checkbox" class="vib_vse">Выбрать все</h1>
-    
+            <div class="hran"></div>
         </div>
         <div class="div_price">
             <h1 class="vash_zak">Ваш заказ</h1>
@@ -29,6 +29,9 @@
             <h1 class="sekonom"></h1> -->
             <button class="per_ofor">Перейти к оформлению</button>
         </div>
+    </div>
+    <div class="glav_2">
+
     </div>
     <footer>
 
