--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/icon/uzum_logo.jpg" class="link_logo" />
+    <link rel="icon" type="image/svg+xml" href="/public/icon/uzum_logo.jpg" class="link_logo" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="/style.scss">
@@ -20,19 +20,19 @@
           <div class="swiper-slide"><img src="https://images.uzum.uz/clk8felenntcj8a9li00/main_page_banner.jpg" alt=""></div>
           <div class="swiper-slide"><img src="https://images.uzum.uz/clk8ih7n7c6gg9id42sg/main_page_banner.jpg" alt=""></div>
           <div class="swiper-slide"><img src="https://images.uzum.uz/clga9ofn7c6qm23k8mkg/main_page_banner.jpg" alt=""></div>
-          <div class="swiper-slide"><img src="https://images.uzum.uz/clk8bt56sfhsc0umkhu0/main_page_banner.jpg" alt=""></div>
+          <div class="swiper-slide"><img src="https://images.uzum.uz/cm97uahs99ouqbfpa8j0/main_page_banner.jpg" alt=""></div>
           <div class="swiper-slide"><img src="https://images.uzum.uz/clk8k67n7c6gg9id43h0/main_page_banner.jpg" alt=""></div>
           <div class="swiper-slide"><img src="https://images.uzum.uz/clk8orfn7c6gg9id45kg/main_page_banner.jpg" alt=""></div>
-          <div class="swiper-slide"><img src="https://images.uzum.uz/clk8m3d6sfhsc0umkm6g/main_page_banner.jpg" alt=""></div>
+          <div class="swiper-slide"><img src="https://images.uzum.uz/cm93jmrifoubkc6mnn0g/main_page_banner.jpg" alt=""></div>
         </div>
       <div class="btns_div">
-        <button class="btn_strelka left_strelka"><img src="//icon/strelka_left.svg" alt=""></button>
-        <button class="btn_strelka right_strelka"><img src="//icon/strelka_right.svg" alt=""></button>
+        <button class="btn_strelka left_strelka"><img src="/public/icon/strelka_left.svg" alt=""></button>
+        <button class="btn_strelka right_strelka"><img src="/public/icon/strelka_right.svg" alt=""></button>
       </div>
       </div>
       <div class="ras">
         <h1 class="rass_prod">Распродажа</h1>
-        <img src="/icon/strelka.svg" alt="" class="strelka_img">      
+        <img src="/public/icon/strelka.svg" alt="" class="strelka_img">      
       </div>
       <div class="product_cards">
         
@@ -40,21 +40,26 @@
       <img src="https://images.uzum.uz/cl88ervn7c6qm23ijb80/main_page_banner.jpg" alt="" class="rass_img_big">
       <div class="ras">
         <h1 class="rass_prod">Рассрочка</h1>
-        <img src="/icon/strelka.svg" alt="" class="strelka_img">      
+        <img src="/public/icon/strelka.svg" alt="" class="strelka_img">      
       </div>
       <div class="product2">
         <div class="product_cards2">
 
         </div>
         <div class="btns_div2">
-          <button class="btn_strelka2 left_strelka2"><img src="//icon/strelka_left.svg" alt=""></button>
-          <button class="btn_strelka2 right_strelka2"><img src="//icon/strelka_right.svg" alt=""></button>
+          <button class="btn_strelka2 left_strelka2"><img src="/public/icon/strelka_left.svg" alt=""></button>
+          <button class="btn_strelka2 right_strelka2"><img src="/public/icon/strelka_right.svg" alt=""></button>
         </div>
       </div>
     </div>
     <footer>
       
     </footer>
+    <div class="modal_sign">
+
+    </div>
+    <script type="module" src="/modules/modal.js"></script>
+    <script type="module" src="/modules/modal_sign.js"></script>
     <script type="module" src="/modules/slider.js"></script>
     <script type="module" src="/modules/footer.js"></script>
     <script type="module" src="/modules/header.js"></script>
