--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="/style.scss">
     <meta name="theme-color" content="#7000ff">
+    <link rel="stylesheet" href="/media.scss">
     <title>Uzum market</title>
   </head>
   <body>
-    <header id="headder">
+    <header id="header">
+
+    </header>
+    <header class="header2">
 
     </header>
     <div class="container">
@@ -52,8 +56,11 @@
         </div>
       </div>
     </div>
-    <footer>
+    <footer class="footer1">
       
+    </footer>
+    <footer class="footer2">
+
     </footer>
     <div class="modal_sign">
 
