--- a/pages/poisk/index.html
+++ b/pages/poisk/index.html
@@ -8,20 +8,39 @@
     <title></title>
 </head>
 <body>
-    <header>
+    <header id="header">
+
+    </header>
+    <header class="header2">
 
     </header>
     <div class="glav_continer">
         <div class="left_glav">
             
         </div>
-        <div class="container">
+        <div class="container_poisk">
+            <h1 class="h1_glav_ser"></h1>
+            <div class="con">
 
+            </div>
         </div>
     </div>
+    <div class="pop_div">
+        <h1 class="pop_h1">Популяпные</h1>
+        <div class="pops">
+
+        </div>
+        <div class="btns_div2">
+          <button class="btn_strelka2 left_strelka2"><img src="/public/icon/strelka_left.svg" alt=""></button>
+          <button class="btn_strelka2 right_strelka2"><img src="/public/icon/strelka_right.svg" alt=""></button>
+        </div>
+      </div>
     <footer>
 
     </footer>
+    <div class="modal_sign">
+        
+    </div>
     <script type="module" src="./index.js"></script>
     <script type="module" src="/modules/modal.js"></script>
     <script type="module" src="/modules/modal_sign.js"></script>
