--- a/pages/product_page/product.html
+++ b/pages/product_page/product.html
@@ -7,10 +7,14 @@
     <link rel="stylesheet" href="/modules/header.scss">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.scss">
+    <link rel="stylesheet" href="./product_media.scss">
     <title></title>
 </head>
 <body>
-    <header>
+    <header id="header">
+
+    </header>
+    <header class="header2">
 
     </header>
      <div class="container">
