--- a/pages/card/card.html
+++ b/pages/card/card.html
@@ -8,7 +8,10 @@
     <title>Корзина</title>
 </head>
 <body>
-    <header>
+    <header id="header">
+
+    </header>
+    <header class="header2">
 
     </header>
     <div class="glav_container">
