--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/icon/uzum_logo.jpg" class="link_logo" />
+    <link rel="icon" type="image/svg+xml" href="/icon/uzum_logo.jpg" class="link_logo" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="/style.scss">
@@ -30,13 +30,13 @@
           <div class="swiper-slide"><img src="https://images.uzum.uz/cm93jmrifoubkc6mnn0g/main_page_banner.jpg" alt=""></div>
         </div>
       <div class="btns_div">
-        <button class="btn_strelka left_strelka"><img src="/public/icon/strelka_left.svg" alt=""></button>
-        <button class="btn_strelka right_strelka"><img src="/public/icon/strelka_right.svg" alt=""></button>
+        <button class="btn_strelka left_strelka"><img src="/icon/strelka_left.svg" alt=""></button>
+        <button class="btn_strelka right_strelka"><img src="/icon/strelka_right.svg" alt=""></button>
       </div>
       </div>
       <div class="ras">
         <h1 class="rass_prod">Распродажа</h1>
-        <img src="/public/icon/strelka.svg" alt="" class="strelka_img">      
+        <img src="/icon/strelka.svg" alt="" class="strelka_img">      
       </div>
       <div class="product_cards">
         
@@ -44,15 +44,15 @@
       <img src="https://images.uzum.uz/cl88ervn7c6qm23ijb80/main_page_banner.jpg" alt="" class="rass_img_big">
       <div class="ras">
         <h1 class="rass_prod">Рассрочка</h1>
-        <img src="/public/icon/strelka.svg" alt="" class="strelka_img">      
+        <img src="/icon/strelka.svg" alt="" class="strelka_img">      
       </div>
       <div class="product2">
         <div class="product_cards2">
 
         </div>
         <div class="btns_div2">
-          <button class="btn_strelka2 left_strelka2"><img src="/public/icon/strelka_left.svg" alt=""></button>
-          <button class="btn_strelka2 right_strelka2"><img src="/public/icon/strelka_right.svg" alt=""></button>
+          <button class="btn_strelka2 left_strelka2"><img src="/icon/strelka_left.svg" alt=""></button>
+          <button class="btn_strelka2 right_strelka2"><img src="/icon/strelka_right.svg" alt=""></button>
         </div>
       </div>
     </div>
