--- a/pages/poisk/index.html
+++ b/pages/poisk/index.html
@@ -31,8 +31,8 @@
 
         </div>
         <div class="btns_div2">
-          <button class="btn_strelka2 left_strelka2"><img src="/public/icon/strelka_left.svg" alt=""></button>
-          <button class="btn_strelka2 right_strelka2"><img src="/public/icon/strelka_right.svg" alt=""></button>
+          <button class="btn_strelka2 left_strelka2"><img src="/icon/strelka_left.svg" alt=""></button>
+          <button class="btn_strelka2 right_strelka2"><img src="/icon/strelka_right.svg" alt=""></button>
         </div>
       </div>
     <footer>
